#163 test: ajusta testes unitários para o novo comportamento de retornos vazios